import UIKit

class DetailsViewController: UIViewController, DetailsViewControllerProtocol {
    private let activityIndicator: UIActivityIndicatorView = UIActivityIndicatorView(style: .large)
    private let segmentedControl: UISegmentedControl = UISegmentedControl(items: SortingOrder.allCases.map { $0.title })
    let textView: UITextView = UITextView()

    private var viewModel: DetailsViewModelProtocol
    private var receivedStrings: [String] = []

    init(viewModel: DetailsViewModelProtocol) {
        self.viewModel = viewModel
...
